--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@babel/preset-react": "7.25.7",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@strapi/provider-upload-cloudinary": "^5.0.1",
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.1",
+    "chart.js": "^4.4.5",
+    "framer-motion": "^11.11.9",
     "next": "14.2.6",
     "next-auth": "^4.24.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
