--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@strapi/provider-upload-cloudinary": "^5.0.1",
+    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.5",
     "framer-motion": "^11.11.9",
     "next": "14.2.6",
     "next-auth": "^4.24.8",
+    "reacharts": "^0.4.5",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
