--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
-    "@mui/material": "^6.1.4",
+    "@mui/material": "^6.1.5",
+    "@mui/x-date-pickers": "^7.22.0",
     "@strapi/provider-upload-cloudinary": "^5.0.1",
     "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.20",
