fixed: persistance of the section 1 of nutritional plans

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:3030/api/server
 NEXTAUTH_SECRET="Gbsinternational281854"
 NEXTAUTH_URL=http://localhost:3000
+EMAIL_USER=christopherabreu88@gmail.com
+EMAIL_PASS='abcd-CDEFGAB-BAGFEDC-efgh'
