--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.5",
     "framer-motion": "^11.11.9",
+    "lucide-react": "^0.456.0",
     "next": "14.2.6",
     "next-auth": "^4.24.8",
     "reacharts": "^0.4.5",
