--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@types/node": "^20",
