--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.7",
     "framer-motion": "^11.14.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.456.0",
     "next": "14.2.6",
     "next-auth": "^4.24.8",
