--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.1",
     "react-icons": "^5.3.0",
     "recharts": "^2.15.0"
   },
