--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@babel/preset-react": "7.25.7",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.5",
     "@mui/x-date-pickers": "^7.22.0",
@@ -20,15 +24,18 @@
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.14.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.456.0",
+    "moment": "^2.30.1",
     "next": "14.2.6",
     "next-auth": "^4.24.8",
     "reacharts": "^0.4.5",
     "react": "^18",
+    "react-big-calendar": "^1.17.0",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
@@ -39,6 +46,8 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18.3.4",
+    "@types/react-big-calendar": "^1.16.0",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.3.0",
     "@types/tailwindcss": "^3.1.0",
     "eslint": "^8",
