--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
   },
   "dependencies": {
     "@babel/preset-react": "7.25.7",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@mui/icons-material": "^6.1.4",
-    "@mui/material": "^6.1.5",
+    "@mui/material": "^6.2.1",
     "@mui/x-date-pickers": "^7.22.0",
     "@strapi/provider-upload-cloudinary": "^5.0.1",
     "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.7",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.28.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.14.4",
     "html2canvas": "^1.4.1",
@@ -38,9 +38,10 @@
     "react-big-calendar": "^1.17.0",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "@types/react": "^18.3.4",
     "@types/react-big-calendar": "^1.16.0",
     "@types/react-calendar": "^4.1.0",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.0",
     "@types/tailwindcss": "^3.1.0",
     "eslint": "^8",
